--- a/exo3/cssexo3js.css
+++ b/exo3/cssexo3js.css
@@ -2,10 +2,8 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
 }
-
-
 
 article {
     display: flex;
