--- a/exo5/cssexo5.css
+++ b/exo5/cssexo5.css
@@ -26,3 +26,25 @@ h1 {
 p {
     font-size: 2em;
 }
+
+form {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: center;
+    gap: 10px
+}
+
+label {
+    font-size: 2em;
+}
+
+input {
+    height: 30px;
+    width: 50%;
+    border-radius: 10px;
+    border: none;
+    text-align: right;
+    font-size: 2em;
+
+}
